k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: window-drop
spec:
  selector:
    matchLabels:
      app: window-drop
  replicas: 1
  template:
    metadata:
      labels:
        app: window-drop
    spec:
      containers:
      - name: backend-deployment
        image: vemshari27/p2p-file-sharing
#         image: khalid2212/window-drop:latest
        ports:
        - containerPort: 3080
