k8s/manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-service-clusterip
  namespace: window-drop
spec:
  ports:
    - port: 8088
      targetPort: 80
  type: ClusterIP
  selector:
    app: window-drop
